# overload

./: .gitignore  pyproject.toml
data/: garbage_cans.yaml
src/overload/: __init__.py
src/overload/detection/: __init__.py  cli.py  detector.py
src/overload/detection/training/: __init__.py  download_data.py  train.py
src/overload/metadata/: __init__.py
tests/: test_detector.py
